Add local runxdg script that invokes system script.
Just adding directly the system path for runxdg does not work as
wgt installer was trying to find it in the package filesystem. So
add a wrapper script that forwards to the main runxdg script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,11 @@ add_custom_command(OUTPUT ${PROJECT_PKG_BUILD_DIR}/runxdg.toml
 
 add_custom_target(runxdg_toml DEPENDS ${PROJECT_PKG_BUILD_DIR}/runxdg.toml)
 add_dependencies(widget runxdg_toml)
+
+add_custom_command(OUTPUT ${PACKAGE_BINDIR}/runxdg
+  COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/runxdg.sh ${PACKAGE_BINDIR}/runxdg
+  COMMAND chmod +x ${PACKAGE_BINDIR}/runxdg
+)
+
+add_custom_target(runxdg_script DEPENDS ${PACKAGE_BINDIR}/runxdg)
+add_dependencies(widget runxdg_script)
