Update the role name from WebBrowser to browser
It updates the role name to browser to sync with the role
name from layers.json and the application name to sync
with role name because runxdg compares it.

[SPEC-1889] Chromium is initially hidden when launched.
https://jira.automotivelinux.org/browse/SPEC-1889

--- a/conf.d/wgt/config.xml.in
+++ b/conf.d/wgt/config.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<widget xmlns="http://www.w3.org/ns/widgets" id="@PROJECT_NAME@" version="@PROJECT_VERSION@">
-  <name>@PROJECT_NAME@</name>
+<widget xmlns="http://www.w3.org/ns/widgets" id="browser" version="@PROJECT_VERSION@">
+  <name>browser</name>
   <icon src="@PROJECT_ICON@"/>
   <content src="@WIDGET_ENTRY_POINT@" type="@WIDGET_TYPE@"/>
   <description>@PROJECT_DESCRIPTION@</description>
