Revert "Add window-size switch for AGL window size"
This reverts commit 0c4c9bb6db649445d3a3aa91088d4ccec7cceae2.

--- a/runxdg.toml
+++ b/runxdg.toml
@@ -14,7 +14,6 @@ path = "/opt/chromium53/chrome"
 
 params = [
   "--in-process-gpu",
-  "--user-data-dir=/opt/chromium53/workdir",
-  "--window-size=608,837"
+  "--user-data-dir=/opt/chromium53/workdir"
 ]
 
